# bookstore

./: .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/tests/test_serializers/: test_order_serializer.py
order/viewsets/: order_viewset.py
product/migrations/: 0001_initial.py  0002_rename_categories_product_category_and_more.py  0003_alter_category_description_alter_category_title.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py
product/viewsets/: product_viewset.py
