[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = ""
authors = ["Kevin Cabral <kevin1tdsb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1.1"
factory-boy = "^3.3.0"
django = "^5.0.4"
djangorestframework = "^3.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
